enlarged font sizes on affirmation deck. fixed spacing on bottom of page on home, music, and pictures

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,4 @@
 .background {
-
   height: 102vh;
   background: url(./Images/grass-background.png) no-repeat fixed center;
   background-size: cover;
@@ -56,6 +55,7 @@
 
 .Main {
   grid-area: Main;
+  height: 100%;
 }
 
 /*tablets and computers */
