--- a/src/Components/AffirmationDeck/AffirmationDeckForm/AffirmationDeckForm.css
+++ b/src/Components/AffirmationDeck/AffirmationDeckForm/AffirmationDeckForm.css
@@ -1,7 +1,7 @@
 .affirmationFormQuestion {
   display: inline-block;
   margin: 0 20px 20px 20px;
-  font-size: 1.2em;
+  font-size: 1.5em;
 }
 
 .affirmationForm {
@@ -27,10 +27,12 @@
   margin-bottom: 50px;
   grid-area: button;
   align-self: end;
+  font-size: 1.2em;
 }
 
 select,
 input {
+  font-size: 1.2em;
   display: block;
   margin-right: auto;
   margin-left: auto;
@@ -44,6 +46,7 @@ input {
 
 select,
 input[type="number"] {
+  font-size: 1.2em;
   border-radius: 5px;
 }
 
@@ -56,6 +59,12 @@ input:hover {
 }
 
 input[type="radio"] {
+  height: .9em;
+  width: .9em;
   display: inline;
   margin: 5px;
+}
+
+.drawOption label {
+  font-size: 1.2em;
 }
