--- a/src/Components/Gallery/Gallery.module.css
+++ b/src/Components/Gallery/Gallery.module.css
@@ -3,6 +3,7 @@
   flex-flow: row wrap;
   justify-content: center;
   margin-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .picture {
@@ -17,15 +18,6 @@
 }
 
 .selected {
-  /* box-sizing: border-box;
-  position: fixed;
-  top: 10vh;
-  left: 10vw; */
-  /* height: 80vh;
-  width: 80vw; */
-  /* z-index: 100;
-  overflow: hidden;
-  margin: 0; */
   max-height: calc(80vh - 9rem);
   width: 100%;
   object-fit: contain;
