--- a/src/Components/Home/Specialties.module.css
+++ b/src/Components/Home/Specialties.module.css
@@ -2,10 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 10px
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+
 }
 .item{
-    width: 90%
+    width: 90%;
+
 }
 
 /* tablet */
@@ -21,9 +24,11 @@
     .list{
         flex-direction: row;
         align-items: stretch;
+        padding: 10px;
     }
     .item{
         flex-basis: 50%;
         width: auto;
+        padding-bottom: 10px;
     }
 }
